--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-;test_build_src = yes
+test_build_src = yes
 build_flags =
     -D ARX_HAVE_LIBSTDCPLUSPLUS=0
