--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,4 @@ board = esp32dev
 framework = arduino
 test_build_src = yes
 build_flags =
-    -D ARX_HAVE_LIBSTDCPLUSPLUS=0
+    -D USE_ARX_LIB=1
