--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,12 @@ framework = arduino
 test_build_src = yes
 build_flags =
     -D USE_ARX_LIB=1
+
+;[env:nanoatmega328]
+;platform = atmelavr
+;board = nanoatmega328
+;board_build.f_cpu = 4000000L
+;framework = arduino
+;test_build_src = yes
+;build_flags =
+;    -D USE_ARX_LIB=1
