--- a/platformio.ini
+++ b/platformio.ini
@@ -7,19 +7,22 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-[env:extra_unity_options]
-platform = espressif32
-board = esp32dev
-framework = arduino
-test_build_src = yes
-build_flags =
-    -D USE_ARX_LIB=1
-
-;[env:nanoatmega328]
-;platform = atmelavr
-;board = nanoatmega328
-;board_build.f_cpu = 4000000L
+;[env:extra_unity_options]
+;platform = espressif32
+;board = esp32dev
 ;framework = arduino
 ;test_build_src = yes
 ;build_flags =
 ;    -D USE_ARX_LIB=1
+
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+monitor_speed = 9600
+board_build.f_cpu = 4000000L
+test_build_src = yes
+lib_deps =
+    Unity
+build_flags =
+    -D USE_ARX_LIB=1
