--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,7 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-[env:extra_unity_options]
+[env:esp32]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -15,11 +15,11 @@ test_build_src = yes
 build_flags =
     -D USE_ARX_LIB=1
 
-;[env:nanoatmega328]
-;platform = atmelavr
-;board = nanoatmega328
-;board_build.f_cpu = 4000000L
-;framework = arduino
-;test_build_src = yes
-;build_flags =
-;    -D USE_ARX_LIB=1
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+board_build.f_cpu = 4000000L
+test_build_src = yes
+build_flags =
+    -D USE_ARX_LIB=1
