--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,14 @@
 [env:nanoatmega328]
 platform = atmelavr
-framework = arduino
 board = nanoatmega328
+framework = arduino
 monitor_speed = 9600
 board_build.f_cpu = 4000000L
 test_build_src = yes
 lib_deps =
     Unity
 build_flags =
+    -D BAUD_RATE=9600
     -D USE_ARX_LIB=1
+    -include Arduino.h
+    -Iinclude
