--- a/platformio.ini
+++ b/platformio.ini
@@ -11,15 +11,19 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
 test_build_src = yes
 build_flags =
+    -D BAUD_RATE=115200
     -D USE_ARX_LIB=1
 
 [env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+monitor_speed = 9600
 board_build.f_cpu = 4000000L
 test_build_src = yes
 build_flags =
+    -D BAUD_RATE=9600
     -D USE_ARX_LIB=1
