--- a/platformio.ini
+++ b/platformio.ini
@@ -19,10 +19,9 @@ build_flags =
 
 [env:nanoatmega328]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 monitor_speed = 9600
-board_build.f_cpu = 4000000L
 test_build_src = yes
 build_flags =
     -D BAUD_RATE=9600
